优化跳转曲线